[project]
name = "PostGPT-backend"
version = "0.1.0"
description = "Local AI backend for tone-based fine-tuning and inference"
readme = "README.md"
authors = [
    {name = "Jeba Singh Emmanuel", email = "jebasingh.emmanuel@gmail.com"}
]
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "peft",
    "scikit-learn",
    "pandas",
    "tqdm",
    "sentencepiece",
    "protobuf"
]
